[gd_scene load_steps=3 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_Interactables/OQ_ButtonPressable.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/momentary_vr_button/MomentaryVrButton.gd" type="Script" id=2]

[node name="OQ_ButtonPressable" instance=ExtResource( 1 )]
script = ExtResource( 2 )
[connection signal="area_exited" from="ButtonArea" to="." method="_on_ButtonArea_area_exited_momentary"]
